--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 server.port=8081
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
-#Turn Statistics on
-spring.jpa.properties.hibernate.generate_statistics=true
-logging.level.org.hibernate.stat=debug
-# Show all queries
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=trace
+#spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+#batch.datasource.url=jdbc:sqlserver://localhost;databaseName=springe2e
+#batch.datasource.username=spring2e2
+#batch.datasource.password=springe2
+#batch.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Oracle settings
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=springe2e
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver.class=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#JPA properties
+#batch.jpa.database-platform=
+batch.jpa.properties.hibernate.format_sql=true
+batch.jpa.show-sql=false
